[package]
name = "logback"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.jaded]
# git = "https://gitlab.com/woollyGibbon/jaded.git"
# branch = "inheritance"
path = "../jaded"
features = ["derive", "renaming"]
