[package]
name = "logback"
version = "0.2.0"
edition = "2018"

[dependencies]
gumdrop = "0.8.0"
yansi = "0.5.0"
chrono = "0.4.19"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.jaded]
# git = "https://gitlab.com/woollyGibbon/jaded.git"
# branch = "inheritance"
path = "../jaded"
features = ["derive", "renaming"]
